src/objects/Seasonal_Address_Line_Item__c.object
<CustomObject>
    <description>This is used for Seasonal Addresses Test</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>This is used for Seasonal Addresses Test</description>
        <label>Mailing City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <description>This is used for Seasonal Addresses Test</description>
        <label>Mailing Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>This is used for Seasonal Addresses Test</description>
        <label>Mailing State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <description>This is used for Seasonal Addresses Test</description>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Seasonal_Address__c</fullName>
        <description>This is used for Seasonal Addresses Test</description>
        <label>Seasonal Address</label>
        <referenceTo>Seasonal_Address__c</referenceTo>
        <relationshipLabel>Seasonal Address Line Items</relationshipLabel>
        <relationshipName>Seasonal_Address_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is used for Seasonal Addresses Test</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isValid_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for Seasonal Addresses Test</description>
        <label>Current Valid Address</label>
        <type>Checkbox</type>
    </fields>
    <label>Seasonal Address Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S.A.LineItem-{000000}</displayFormat>
        <label>Seasonal Address Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seasonal Address Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>